--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "test": "npm run test:ava",
     "test:ava": "ava --timeout 2m tests/*.mjs",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
-    "docs": "documentation readme ./src/context.mjs --section=API",
+    "docs": "documentation readme --section=API ./src/**/*.mjs",
     "lint": "npm run lint:docs",
-    "lint:docs": "documentation lint ./src/context.mjs"
+    "lint:docs": "documentation lint ./src/**/*.mjs"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
