--- a/.github/workflows/codeql_analysis.yml
+++ b/.github/workflows/codeql_analysis.yml
@@ -22,6 +22,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.17.1
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14.17.1
       - run: npm install
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
