--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,23 +5,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         node-version:
           - 14.17.3
+          - 16.5.0
     steps:
       - uses: actions/checkout@v2
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: >-
-            ${{ runner.os }}-build-${{ env.cache-name }}-${{
-            hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
       - name: Build / Test Node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -30,8 +22,6 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm run cover --if-present
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
