--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
       - run: npm run cover --if-present
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@master
         with:
