--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: npm
-      - run: npm install
+      - run: npm ci
       - run: npm run build --if-present
       - run: npm run cover --if-present
         env:
@@ -43,7 +43,7 @@ jobs:
         with:
           node-version: 16.15.0
           cache: npm
-      - run: npm install
+      - run: npm ci
       - run: npx semantic-release
         env:
           CI: 'true'
