--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/template-tools/template-sync.git"
+    "url": "https://github.com/template-tools/template-sync"
   },
   "bugs": {
     "url": "https://github.com/template-tools/template-sync/issues"
