--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "execa": "^7.1.1",
     "github-repository-provider": "^8.0.19",
     "mock-repository-provider": "^6.2.51",
-    "semantic-release": "^21.0.3s"
+    "semantic-release": "^21.0.5"
   },
   "engines": {
     "node": ">=16.19.0"
