--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "content-entry": "^9.0.0",
     "expression-expander": "^7.1.3",
     "hinted-tree-merger": "^6.2.1",
-    "js-yaml": "^4.1.0",
     "loglevel-mixin": "^7.2.1",
     "markdown": "^0.5.0",
     "matching-iterator": "^2.1.3",
@@ -50,7 +49,8 @@
     "recast": "^0.23.4",
     "remark-parse": "^11.0.0",
     "remark-stringify": "^11.0.0",
-    "unified": "^11.0.4"
+    "unified": "^11.0.4",
+    "yaml": "^2.4.0"
   },
   "devDependencies": {
     "ava": "^6.1.1",
