--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
   release:
     needs:
       - test-node
-    runs-on: linux
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       issues: write
